--- a/contact.css
+++ b/contact.css
@@ -76,6 +76,26 @@ nav a:hover {
     background-color: #BCAF9C;
 }
 
+.about-us {
+    background-color: #E8C7DE;
+    border-radius: 15px;
+    padding: 20px;
+    max-width: 700px;
+    margin: 20px auto;
+    text-align: center;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.about-us h2 {
+    color: #69626D;
+    margin-bottom: 10px;
+}
+
+.about-us p {
+    color: #69626D;
+    font-size: 1.1em;
+}
+
 footer {
     background-color: #69626D;
 }
