--- a/training.css
+++ b/training.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    color: #69626D;
+    color: white;
     background-color: #F9F5F6;
     margin: 0;
     padding: 0;
