--- a/training.css
+++ b/training.css
@@ -27,7 +27,7 @@ header .logo img {
 }
 
 header nav a {
-    color: #69626D;
+    color: white;
     text-decoration: none;
     margin: 0 10px;
     font-size: 1em;
@@ -40,7 +40,7 @@ header nav a:hover {
 .training-intro {
     text-align: center;
     background-color: #E8C7DE;
-    color: #69626D;
+    color: white;
     padding: 50px 20px;
 }
 
@@ -80,7 +80,7 @@ header nav a:hover {
 
 .features h2 {
     font-size: 1.5em;
-    color: #69626D;
+    color: white;
     margin-bottom: 10px;
 }
 
